# RowBlaze

./: .dockerignore  .gitattributes  .pre-commit-config.yaml  AGENTIC_RAG_SOLUTION.md  AGENTIC_TOOL_EXECUTION_FIXES.md  AUTHENTICATION.md  AUTHENTICATION_GUIDE.md  Dockerfile.api  Dockerfile.app  GIT_LFS_SETUP.md  ITERATION_DECISION_IMPROVEMENTS.md  README.md  Screen Recording 2025-10-16 at 01.48.39.mov  VIDEO_SETUP_SUMMARY.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  railway.json  requirements-api.txt  requirements-app.txt  requirements.txt  setup_git_lfs.sh  test_agent_direct.py  test_agent_fixes.py  test_agent_iteration_decision.py  test_agent_tool_selection.py  test_agentic_api_endpoint.py  test_agentic_mode.py  test_agentic_rag.py  test_agentic_tool_execution.py  test_auth_endpoints.py  test_auth_system.py  test_chunk_kg_endpoints.py  test_complete_agentic_flow.py  test_comprehensive_deduplication.py  test_enhanced_deduplication.py  test_fixes.py  test_ingestion_deduplication.py  test_iteration_decision_demo.py  (+6 more)
.github/workflows/: ci-cd.yml
RowBlaze-logo/: info.txt
api/: dependencies.py  main.py  models.py
api/middleware/: auth_middleware.py
api/routes/: auth.py  chat.py  ingestion.py  retrieval.py
app/: app.py  auth.py  github_auth.py  login.py  utils.py
app/landing/: app.py
app/landing/components/: hero_section.py  navbar.py
app/landing/styles/: styles.css
docker/scripts/: healthcheck.py
nginx/: Dockerfile  nginx.conf
sdk/: README.md  client.py  eventhandler.py  message.py  response.py  state.py
src/core/agents/: static_research_agent.py
src/core/base/: __init__.py  abstractions.py
src/core/base/parsers/: __init__.py  base_parser.py  csv_parser.py  doc_parser.py  doc_to_mrkdn_parser.py  docx_parser.py  image_parser.py  ocr_parser.py  odt_parser.py  text_parser.py  xlsx_parser.py
src/core/databases/: __init__.py  base.py  neo4j_provider.py  tigergraph_provider.py
src/core/ingestion/: rag_ingestion.py
src/core/prompts/: chunk_enrichment.yaml  herarchy1.yaml  rag_fusion.yaml  static_research_agent.yaml
src/core/retrieval/: rag_retrieval.py
src/core/tools/: KeywordSearch.py  get_file_content.py  search_file_descriptions.py  search_file_knowledge.py  vectorsearch.py
src/ontology/: schema.py
src/ontology/schemas/: document-0.1.0.yaml
tests/: conftest.py
tests/e2e/: test_complete_workflow.py
tests/integration/: test_api_integration.py
tests/unit/api/: test_main.py
tests/unit/src/: test_parsers.py
