[project]
name = "rowblaze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "bson>=0.5.10",
    "dotenv>=0.9.9",
    "elasticsearch>=9.1.1",
    "extra-streamlit-components>=0.1.81",
    "filetype>=1.2.0",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "markdown>=3.9",
    "mistralai>=1.9.10",
    "networkx>=3.5",
    "odfpy>=1.4.1",
    "olefile>=0.47",
    "openai>=1.108.1",
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "pillow-heif>=1.1.1",
    "pymupdf>=1.26.4",
    "pypandoc>=1.15",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "streamlit>=1.48.0",
    "tiktoken>=0.11.0",
    "watchdog>=6.0.0",
]
